--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="first-block">
         <div class=".col-md-4">
             <h1 id="myTitle">Hello Saratech</h1>
-            <h2 id="subTitle">This is my interview</h2>
+            <h2 id="subTitle">HTML & CSS Practice</h2>
             <p id="textNum1">Thank you for your time and consideration</p>
         </div>
     </div>
